# ln-node-lifetime-analysis

./: .gitignore  LICENSE  README.md  analysis.ipynb  pyproject.toml
results/: tab01.xlsx  tab02-1.xlsx  tab02-2.xlsx  tab03.xlsx  tab04-1.xlsx  tab04-2.xlsx  tab04-3.xlsx  tab04-4.xlsx  tab04.xlsx
src/: analysis copy.ipynb  asas  countries.py  data copy.py  data.py  geocode.py  geonodes.py  nodes.py
